culture view engine fixed

--- a/Topppro.WebSite/Views/News/Index.cshtml
+++ b/Topppro.WebSite/Views/News/Index.cshtml
@@ -9,6 +9,7 @@
         </div>
     </div>
     @Html.Article(
+        culture: "en",
         image:"../images/spanish.translation.jpg",
         title:"Topp Pro Spanish Website",
         content: "We are working to upload the spanish translation.<br>Sorry for the inconvenience. Please come back soon.")
